--- a/templates/channel.html
+++ b/templates/channel.html
@@ -73,10 +73,10 @@
                         <span class="note-comments">0 comments</span>
                         {% if user.is_authenticated %}
                         <span class="note-actions">
-                            {% if note.author == user %}
-                            <a class="note-edit fa fa-pencil" href="note?a=edit&id={{ note.id }}" role="button" aria-label="edit"></a>
+                            {% if note.author == user %} {# Show the edit button to the author #}
+                            <a class="note-edit fa fa-pencil" href="#" role="button" aria-label="edit"></a>
                             {% endif %}
-                            <a class="note-delete fa fa-trash" href="note?a=delete&id={{ note.id }}" role="button" aria-label="delete"></a>
+                            <a class="note-delete fa fa-trash" href="#" role="button" aria-label="delete"></a>
                         </span>
                         {% endif %}
                     </p>
@@ -86,21 +86,28 @@
         </div> <!-- #main-container -->
 
         <aside class="sidebar-container">
-            <div class="courses">
-                <h2>CS 3398.002 - Software Engineering</h2>
+            <div id="courses">
+                <h2 id="courses-menu-toggle">CS 3398.002 - Software Engineering</h2>
                 <div class="courses-other">
-                    <h2 class="courses-add">Add new class</h2>
+                    <h2 id="courses-add">Add new class</h2>
                 </div>
             </div>
             <h3 class="class-title">CLASS SESSIONS</h3>
             <div class="session-list">
                 <h3 class="viewing">All Sessions</h3>
             </div>
+            <a id="collapse-menu" class="fa fa-chevron-circle-left" href="#">Collapse Menu</a>
+            <a id="expand-menu" class="fa fa-chevron-circle-right" href="#">Expand Menu</a>
         </aside>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="{% static 'js/vendor/jquery-1.11.2.min.js' %}"><\/script>')</script>
 
         <script src="{% static 'js/main.js' %}"></script>
+        <script>
+            $("#courses-menu-toggle").click(function() {$("#courses").toggleClass('courses-menu-open');});
+            $("#collapse-menu").click(function() {$(document.body).toggleClass('menu-closed');});
+            $("#expand-menu").click(function() {$(document.body).toggleClass('menu-closed');});
+        </script>
     </body>
 </html>
