--- a/templates/channel.html
+++ b/templates/channel.html
@@ -102,9 +102,11 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="{% static 'js/vendor/jquery-1.11.2.min.js' %}"><\/script>')</script>
+        <script src="{% static 'js/vendor/jquery.ns-autogrow.min.js' %}"></script>
 
         <script src="{% static 'js/main.js' %}"></script>
         <script>
+            $('#id_body_text').autogrow({vertical: true, horizontal: false, flickering: false});
             $("#courses-menu-toggle").click(function() {$("#courses").toggleClass('courses-menu-open');});
             $("#collapse-menu").click(function() {$(document.body).toggleClass('menu-closed');});
             $("#expand-menu").click(function() {$(document.body).toggleClass('menu-closed');});
