--- a/static/css/main.css
+++ b/static/css/main.css
@@ -232,6 +232,14 @@ body.full-height {
     outline: none;
 }
 
+.note-meta {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .note-date, .note-author, .note-comments {
     display: block;
     float: left;
@@ -374,7 +382,7 @@ form#login-form {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
-    user-select: none;;
+    user-select: none;
 
     -webkit-transition: left 0.2s;
     -moz-transition: left 0.2s;
