--- a/static/css/main.css
+++ b/static/css/main.css
@@ -232,6 +232,11 @@ body.full-height {
     outline: none;
 }
 
+.note-body p {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+}
+
 .note-meta {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
