--- a/templates/channel.html
+++ b/templates/channel.html
@@ -13,7 +13,7 @@
         <link rel="apple-touch-icon" href="{% static 'images/apple-touch-icon.png' %}">
 
         <link rel="stylesheet" href="{% static 'css/normalize.min.css' %}">
-        <link rel="stylesheet" href="{% static 'css/main.css' %}?1478204657">
+        <link rel="stylesheet" href="{% static 'css/main.css' %}?1478595279">
         <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
         <script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js' %}"></script>
     </head>
@@ -149,17 +149,16 @@
                 });
             }
 
-            function ajaxDeleteNote(href, id) {
+            function ajaxDeleteNote(href) {
                 $.ajax({
-                    url: href + "?action=delete&note=" + id,
+                    url: href,
                     success: function() {ajaxSingleUpdate();}
                 });
             }
             function applyNoteActions () {
                 $(".note-delete").click( function(event){
                     event.preventDefault();
-                    ajaxDeleteNote($(this).prop("href"), $(this).parent().parent().parent().prop("id").substring(5));
-                    // FIXME parent parent parent, really? please fix this...
+                    ajaxDeleteNote($(this).prop("href"));
                 });
             }
             function commonmarkParse () {
