--- a/templates/channel.html
+++ b/templates/channel.html
@@ -74,7 +74,7 @@
                             <span class="note-comments">0 comments</span>
                             {% if user.is_authenticated %}
                             <span class="note-actions">
-                                {% if note.author == user %} {# Show the edit/delete buttons to the author #}
+                                {% if note.author == user or user.is_superuser %} {# Show the edit/delete buttons to the author, or a superuser #}
                                 <a class="note-edit fa fa-pencil" href="#" role="button" aria-label="edit"></a><a class="note-delete fa fa-trash" href="{% url 'ajax' %}?action=delete&note={{ note.id }}" role="button" aria-label="delete"></a>
                                 {% endif %}
                             </span>
@@ -116,62 +116,10 @@
 
             var user = new Object();
             user.is_authenticated = {% if user.is_authenticated %}true;
+            user.is_superuser = {% if user.is_superuser %}true;{% else %}false;{% endif %}
             user.email = "{{ user.email }}";{% else %}false;{% endif %}
-
-            function ajaxLiveUpdate() {
-                $.ajax({
-                    url: '{% url 'ajax' %}?action=load&channel=1&session=all',
-                    success: function(notes) {
-                        $('#results').html("");
-                        for (var i in notes) {
-                            outputNote(notes[i]);
-                        }
-                        applyNoteActions();
-                        commonmarkParse();
-                    },
-                    complete: function() {
-                        // Schedule the next request in 5 seconds
-                        setTimeout(ajaxLiveUpdate, 5 * 1000);
-                    }
-                });
-            }
-            function ajaxSingleUpdate(action) {
-                $.ajax({
-                    url: '{% url 'ajax' %}?action=load&channel=1&session=all',
-                    success: function(notes) {
-                        $('#results').html("");
-                        for (var i in notes) {
-                            outputNote(notes[i]);
-                        }
-                        applyNoteActions();
-                        commonmarkParse();
-                    }
-                });
-            }
-
-            function ajaxDeleteNote(href) {
-                $.ajax({
-                    url: href,
-                    success: function() {ajaxSingleUpdate();}
-                });
-            }
-            function applyNoteActions () {
-                $(".note-delete").click( function(event){
-                    event.preventDefault();
-                    ajaxDeleteNote($(this).prop("href"));
-                });
-            }
-            function commonmarkParse () {
-                $(".note-body").each(function(i, obj) {
-                    var reader = new commonmark.Parser();
-                    var writer = new commonmark.HtmlRenderer({smart: true, safe: true});
-                    var parsed = reader.parse($(this).text());
-                    $(this).html(writer.render(parsed));
-                });
-            }
-            applyNoteActions();
         </script>
-        <script src="{% static 'js/channel.js' %}" onload="setTimeout(ajaxLiveUpdate, 5 * 1000)"></script>
+        <script src="{% static 'js/channel.js' %}" onload="applyNoteActions();setTimeout(ajaxLiveUpdate, 5 * 1000)"></script>
         <script src="{% static 'js/vendor/commonmark.js' %}" onload="commonmarkParse()"></script>
     </body>
 </html>
