ajax form posting

--- a/templates/channel.html
+++ b/templates/channel.html
@@ -37,7 +37,7 @@
                     {% csrf_token %}
                     {{ form.as_p }}
                     <p>
-                        <input type="submit" value="Post">
+                        <input id="note-post" type="submit" value="Post">
                     </p>
                 </form>
                 {% else %}
@@ -119,7 +119,7 @@
             user.is_superuser = {% if user.is_superuser %}true;{% else %}false;{% endif %}
             user.email = "{{ user.email }}";{% else %}false;{% endif %}
         </script>
-        <script src="{% static 'js/channel.js' %}" onload="applyNoteActions();setTimeout(ajaxLiveUpdate, 5 * 1000)"></script>
-        <script src="{% static 'js/vendor/commonmark.js' %}" onload="commonmarkParse()"></script>
+        <script src="{% static 'js/channel.js' %}?1478645337" onload="applyNoteActions();setTimeout(ajaxLiveUpdate, 5 * 1000);"></script>
+        <script src="{% static 'js/vendor/commonmark.js' %}" onload="commonmarkParse();"></script>
     </body>
 </html>
