modified email message, and used post_save instead of pre_save

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
                     {% else %}
                         {% if account_created %}
                     <p>
-                        Account created successfully.
+                        Account created successfully. Activate your account using the link sent to your email address.
                     </p>
                         {% endif %}
                     <form id="login-form" method="post">
