--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
                         Account successfully activated.
                     </p>
                         {% endif %}
-                    <form id="login-form" method="post">
+                    <form id="login-form" method="post" action="{% url 'index' %}">
                         <h3>Log In</h3>
                         {% if invalid_login %}
                         <p>
@@ -99,7 +99,7 @@
                         </p>
                         <input type="submit" name="login-form" value="Log in" />
                     </form>
-                    <form id="signup-form" method="post">
+                    <form id="signup-form" method="post" action="{% url 'index' %}">
                         <h3>Sign Up With Texas State Email</h3>
                         {% csrf_token %}
                         {{ form_signup.as_p }}
